# pai-sdk

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: embedding.md  prompt-config.md
docs/notes/: structured-history-conversation-summary.md
docs/rfcs/: 0001-trace-backed-structured-history.md
examples/: basic.py  gepa_optimize_anything.py  prompt_document.py  prompt_template.py  trace_history.py
experiments/bakeoff/: README.md
experiments/bakeoff/dspy_bridge/: README.md  dspy_bridge_trace_prototype.py
experiments/bakeoff/pai_native/: README.md  trace_prototype.py
spec/: README.md
src/model_message/: __init__.py  _prompt.py  errors.py  generate.py  messages.py  middleware.py  output.py  pricing.py  prompts.py  provider.py  registry.py  results.py  serialize.py  stream.py  tools.py  transforms.py
src/model_message/providers/: __init__.py  _util.py  anthropic.py  google.py  openai_chat.py  openai_embedding.py  openai_responses.py  openrouter.py
src/pai_sdk/: __init__.py  _prompt.py  agent.py  braintrust_import.py  embedding.py  generate.py  messages.py  middleware.py  optimization.py  prompt-config.schema.json  prompts.py  registry.py  results.py  serialize.py  spec.py  telemetry.py  tools.py  trace.py  typed.py
src/pai_sdk/integrations/: __init__.py  braintrust.py  otel.py
src/pai_sdk/providers/: __init__.py  _util.py  azure.py  bedrock.py  google_embedding.py  vertex.py
tests/: conftest.py  test_agent.py  test_anthropic_extras.py  test_braintrust_import.py  test_conformance.py  test_core_extensions.py  test_embedding.py  test_generate.py  test_google_extras.py  test_live.py  test_live_advanced.py  test_live_cache.py  test_loop_control.py  test_messages.py  test_middleware.py  test_new_providers.py  test_openai_extras.py  test_openrouter_extras.py  test_optimization.py  test_otel_instrumentation.py  test_otel_integration.py  test_output.py  test_pricing.py  test_prompt_document.py  test_provider_mapping.py  test_registry.py  test_sdk_integration.py  test_serialize.py  test_spec.py  test_stream.py  test_telemetry.py  test_trace.py  test_typed_prompts.py
