[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pai-sdk"
version = "0.6.0"
description = "AI-SDK-style ModelMessage types, generate_text/stream_text, and prompt configs for Python — OpenAI, Anthropic, Gemini, OpenRouter, Bedrock, Vertex, Azure."
readme = "README.md"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Typing :: Typed",
]
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Raveesh Bhalla" }]
dependencies = [
    "pydantic>=2.7",
    "httpx>=0.27",
]

[project.urls]
Repository = "https://github.com/raveeshbhalla/pai-sdk"
Changelog = "https://github.com/raveeshbhalla/pai-sdk/blob/main/CHANGELOG.md"

[project.optional-dependencies]
openai = ["openai>=1.60"]
anthropic = ["anthropic>=0.40"]
google = ["google-genai>=1.0"]
bedrock = ["anthropic[bedrock]>=0.40"]
vertex = ["anthropic[vertex]>=0.40", "google-genai>=1.0"]
yaml = ["pyyaml>=6"]
all = [
    "openai>=1.60",
    "anthropic[bedrock,vertex]>=0.40",
    "google-genai>=1.0",
    "pyyaml>=6",
]

[tool.hatch.build.targets.wheel]
packages = ["src/pai_sdk"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "live: tests that call real provider APIs (need keys in .env.local; deselect with -m 'not live')",
]

[dependency-groups]
dev = ["pytest>=8", "pytest-asyncio>=0.24", "jsonschema>=4"]
